stretched photos on spot show page fix and grid size fix

--- a/frontend/src/components/SpotShowPage/spotshow.css
+++ b/frontend/src/components/SpotShowPage/spotshow.css
@@ -11,17 +11,26 @@
     display: flex;
 }
 
+.most-upvoted-photo-container{
+    height: 460px;
+    width: 580px;
+    margin-right: 20px;
+}
+
 .top-upvoted-photos{
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 300px 300px;
+    grid-template-rows: 220px 220px;
     grid-column-gap: 20px;
     grid-row-gap: 20px;
 }
 
 .most-upvoted-image{
-    height: 400px;
-    width: 600px;
+    /* height: 400px;
+    width: 600px; */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     background-color: black;
     color: white;
     margin-right: 20px;
@@ -29,8 +38,11 @@
 }
 
 .top-upvoted-smaller-images{
-    height: 190px;
-    width: 305px;
+    /* height: 190px;
+    width: 305px; */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     background-color: rgb(143, 250, 245);
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 }
